# UdonPred-Benchmarking

./: .gitignore  README.md  pyproject.toml
notebooks/evaluation/: Calculate per-protein stats.ipynb  Parse CAID3 predictions.ipynb  Parse TriZOD predictions.ipynb
notebooks/plots/: Correlation between methods.ipynb  Heatmap & parallel coordinates plot.ipynb  Lollipop plot.ipynb  Per-protein boxplot & barplot.ipynb  Per-residue PR curves.ipynb  Per-residue barplot.ipynb  Stratification by disorder content.ipynb  Stratification by protein length.ipynb
scripts/: prepare_data_for_upload.sh
src/udonpred_benchmarking/: constants.py  plots.py
src/udonpred_benchmarking/postprocessing/: __init__.py  udonpred.py
src/udonpred_benchmarking/result_parsing/: alphafold_disorder.py  caid.py  fasta.py  fldpnn.py  odinpred.py
